  - fix for commit logic on pymssql
  - fix for query.get() with schema [ticket:456]
  - fix for non-integer relationships [ticket:473]
  - DB-API module now selectable at run-time [ticket:419]
  - preliminary support for pyodbc (Yay!) [ticket:419]
  - now passes more unit tests [ticket:422]
  - better unittest compatibility with ANSI functions [ticket:479]
  
0.3.4
- general:
  - global "insure"->"ensure" change. in US english "insure" is actually
    largely interchangeable with "ensure" (so says the dictionary), so I'm not
    completely illiterate, but its definitely sub-optimal to "ensure" which is
    non-ambiguous.
- sql:
  - added "fetchmany()" support to ResultProxy
  - added support for column "key" attribute to be useable in
    row[<key>]/row.<key>
  - changed "BooleanExpression" to subclass from "BinaryExpression", so that
    boolean expressions can also follow column-clause behaviors (i.e. label(),
    etc).
  - trailing underscores are trimmed from func.<xxx> calls, such as func.if_()
  - fix to correlation of subqueries when the column list of the select
    statement is constructed with individual calls to append_column(); this
    fixes an ORM bug whereby nested select statements were not getting
    correlated with the main select generated by the Query object.
  - another fix to subquery correlation so that a subquery which has only one
    FROM element will *not* correlate that single element, since at least one
    FROM element is required in a query.
  - default "timezone" setting is now False. this corresponds to Python's
    datetime behavior as well as Postgres' timestamp/time types (which is the
    only timezone-sensitive dialect at the moment) [ticket:414]
  - the "op()" function is now treated as an "operation", rather than a
    "comparison". the difference is, an operation produces a BinaryExpression
    from which further operations can occur whereas comparison produces the
    more restrictive BooleanExpression