@@ -68,6 +68,7 @@
   - preliminary support for pyodbc (Yay!) [ticket:419]
   - now passes more unit tests [ticket:422]
   - better unittest compatibility with ANSI functions [ticket:479]
+  - improved support for implicit sequence PK columns with auto-insert [ticket:415]
   
 0.3.4
 - general:
